@@ -20,10 +20,19 @@ subprojects {
     dependencies {
         implementation 'com.zeroc:ice:3.7.6'
         
-        // Dependencias para JavaFX
-        implementation "org.openjfx:javafx-base:17.0.8:${System.getProperty('os.name').toLowerCase()}"
-        implementation "org.openjfx:javafx-controls:17.0.8:${System.getProperty('os.name').toLowerCase()}"
-        implementation "org.openjfx:javafx-graphics:17.0.8:${System.getProperty('os.name').toLowerCase()}"
+        // JavaFX Dependencies
+    def javafxVersion = '17.0.8'
+
+    implementation "org.openjfx:javafx-base:${javafxVersion}:win"
+    implementation "org.openjfx:javafx-controls:${javafxVersion}:win"
+    implementation "org.openjfx:javafx-graphics:${javafxVersion}:win"
+    }
+
+    tasks.withType(JavaExec) {
+        jvmArgs = [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
     }
 
     jar {
